# runtimeinfo

./: README.md  pyproject.toml
.github/workflows/: python-package-windows.yml  python-package.yml
src/runtimeinfo/: __init__.py  cli.py  runtime_info.py
tests/: test_root.py  test_root_cli.py
