[tool.poetry]
name = "runtimeinfo"
version = "0.1.1"
description = "Utilities for capturing runtime host information"
authors = ["Takashi Sasaki <takashi316@gmail.com>"]
readme = "README.md"
packages = [
    {include = "runtimeinfo", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.8"
jcs = ">=0.2"

[tool.poetry.group.dev.dependencies]
flake8 = {version = "^6.0", python = ">=3.8.1"}
pytest = "^8.0"

[tool.poetry.scripts]
runtimeinfo = "runtimeinfo.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
